--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,8 +3,8 @@
 </h1>
 
 
-<form action="/list" method="POST">
-	<input type="text" name ="todo" value="<%= showToDo.toDo%>">
+<form action="/list/<%=showToDo._id%>?_method=PUT" method="POST">
+	<input type="text" name ="todo[toDo]" value="<%= showToDo.toDo%>">
 	<button>Submit</button>
 
 </form>
