added delete route and fixed landing page typo also made edit redirect to list page

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,5 +1,9 @@
 <% include partials/header %>
 <h1><%= showToDo.toDo %>
 </h1>
+<a href="/list/<%=showToDo._id%>/edit" class= "btn btn-primary btn-large">edit</a>
+<form action="/list/<%=showToDo._id%>?_method=DELETE" method="POST">
+	<button class ="btn btn-large">DELETE</button>
+</form>
 
 <% include partials/footer %>
