added logout route, logged in middleware, added nav bar to all pages and updated links in nav bar

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,13 +17,13 @@
 	    <div class="collapse navbar-collapse" id="collapsibleNavbar">
 	      <ul class="navbar-nav ml-auto	">
 	        <li class="nav-item">
-	         <a class="nav-link" href="#">Active</a>
+	         <a class="nav-link" href="/login">Login</a>
 	        </li>
 	       <li class="nav-item">
-	         <a class="nav-link" href="#">Link</a>
+	         <a class="nav-link" href="/register">Signup</a>
 	       </li>
 	       <li class="nav-item">
-	         <a class="nav-link" href="#">Link</a>
+	         <a class="nav-link" href="/logout">Logout</a>
 	       </li>
 	      </ul>
 	   	  	</div>
