--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,4 @@
+<% include partials/header %>
 <h1>SIgn up</h1>
 
 <form action="/register" method="POST">
@@ -7,3 +8,4 @@
 	
 
 </form>
+<% include partials/footer %>
