--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,15 +16,23 @@
 		</button>
 	    <div class="collapse navbar-collapse" id="collapsibleNavbar">
 	      <ul class="navbar-nav ml-auto	">
+	      	<% if(!currentUser){ %>
 	        <li class="nav-item">
 	         <a class="nav-link" href="/login">Login</a>
 	        </li>
 	       <li class="nav-item">
 	         <a class="nav-link" href="/register">Signup</a>
 	       </li>
+	       <% } else { %>
+	        <li class="nav-item">
+	         <a class="nav-link" href="#">
+	         Signed in as <%= currentUser.username%>
+	         </a>
+	       </li>
 	       <li class="nav-item">
 	         <a class="nav-link" href="/logout">Logout</a>
 	       </li>
+	       <%}%>
 	      </ul>
 	   	  	</div>
 	</nav>
