--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
     <head>
     	<!--Bootstrap-->
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
         <title>To Do List</title>
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
